--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,9 @@ jacocoTestReport {
         html.enabled = true
     }
     afterEvaluate {
-        classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: [
-                    '**/*Main**'
-            ])
-        })
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: 'Solver/Main.**')
+        }))
     }
 }
 
